--- a/testsuite/tests/driver/Makefile
+++ b/testsuite/tests/driver/Makefile
@@ -797,7 +797,7 @@ T23339:
 	$(RM) T23339$(OBJSUFFIX)
 	$(RM) -rf "$(PWD)/tmp"
 	mkdir -p tmp
-	TMPDIR="$(PWD)/tmp" "$(TEST_HC)" $(TEST_HC_OPTS) -v0 T23339.hs
+	"$(TEST_HC)" -tmpdir "$(PWD)/tmp" $(TEST_HC_OPTS) -v0 T23339.hs
 	find . -name "*.c" -exec cat {} \; | grep "init__ip_init"
 
 T23339B:
@@ -805,7 +805,7 @@ T23339B:
 	$(RM) T23339$(OBJSUFFIX)
 	$(RM) -rf "$(PWD)/tmp"
 	mkdir -p tmp
-	TMPDIR="$(PWD)/tmp" "$(TEST_HC)" $(TEST_HC_OPTS) -v0 T23339B.hs -finfo-table-map
+	"$(TEST_HC)" -tmpdir "$(PWD)/tmp" $(TEST_HC_OPTS) -v0 T23339B.hs -finfo-table-map
 	# Check that the file is kept and is the right one
 	find . -name "*.c" -exec cat {} \; | grep "init__ip_init"
 
