--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -726,6 +726,7 @@ Library
         GHC.Tc.Solver.Rewrite
         GHC.Tc.Solver.InertSet
         GHC.Tc.Solver.Interact
+        GHC.Tc.Solver.Irred
         GHC.Tc.Solver.Equality
         GHC.Tc.Solver.Dict
         GHC.Tc.Solver.Monad
