JS: Implement h$clock_gettime in the JavaScript RTS (#23360)
(cherry picked from commit 5e3f9bb57680a40f6a9531e41dc2617c5f028e5c)

--- a/rts/rts.cabal.in
+++ b/rts/rts.cabal.in
@@ -99,6 +99,7 @@ library
         js/verify.js
         js/weak.js
         js/globals.js
+        js/time.js
 
       install-includes: HsFFI.h MachDeps.h Rts.h RtsAPI.h Stg.h
                         ghcautoconf.h ghcconfig.h ghcplatform.h ghcversion.h
