--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -710,6 +710,7 @@ Library
         GHC.Tc.Errors.Hole.FitTypes
         GHC.Tc.Errors.Ppr
         GHC.Tc.Errors.Types
+        GHC.Tc.Errors.Types.PromotionErr
         GHC.Tc.Gen.Annotation
         GHC.Tc.Gen.App
         GHC.Tc.Gen.Arrow
@@ -742,6 +743,14 @@ Library
         GHC.Tc.Solver.Types
         GHC.Tc.TyCl
         GHC.Tc.TyCl.Build
+        GHC.Tc.Types.CtLocEnv
+        GHC.Tc.Types.ErrCtxt
+        GHC.Tc.Types.LclEnv
+        GHC.Tc.Types.TcIdSigInfo
+        GHC.Tc.Types.TH
+        GHC.Tc.Types.TcRef
+        GHC.Tc.Types.TcBinder
+        GHC.Tc.Types.TcTyThing
         GHC.Tc.TyCl.Class
         GHC.Tc.TyCl.Instance
         GHC.Tc.TyCl.PatSyn
