--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -719,6 +719,7 @@ Library
         GHC.Tc.Errors.Hole.FitTypes
         GHC.Tc.Errors.Ppr
         GHC.Tc.Errors.Types
+        GHC.Tc.Errors.Types.PromotionErr
         GHC.Tc.Gen.Annotation
         GHC.Tc.Gen.App
         GHC.Tc.Gen.Arrow
@@ -761,8 +762,12 @@ Library
         GHC.Tc.Types.EvTerm
         GHC.Tc.Types.Origin
         GHC.Tc.Types.Rank
-        GHC.Tc.Types.TcBinder
+        GHC.Tc.Types.CtLocEnv
+        GHC.Tc.Types.ErrCtxt
+        GHC.Tc.Types.LclEnv
+        GHC.Tc.Types.TH
         GHC.Tc.Types.TcRef
+        GHC.Tc.Types.BasicTypes
         GHC.Tc.Utils.Backpack
         GHC.Tc.Utils.Concrete
         GHC.Tc.Utils.Env
