base: Move integer showing functions from Numeric to GHC.Show.Integer
These functions are needed in GHC.Show and Numeric brings in quite a bit
more than strictly necessary.

--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -346,6 +346,7 @@ Library
         Data.Semigroup.Internal
         Data.Typeable.Internal
         Foreign.ForeignPtr.Imp
+        GHC.Show.Integer
         GHC.IO.Handle.Lock.Common
         GHC.IO.Handle.Lock.Flock
         GHC.IO.Handle.Lock.LinuxOFD
