Zonking monad transformers
  - Introduce two zonking monad transformers, ZonkT and ZonkBndrT.
    ZonkT is a reader monad transformer over ZonkEnv.
    ZonkBndrT m is the codensity monad over ZonkT m.

    ZonkBndrT is used for computations that accumulate binders
    in the ZonkEnv.

  - Split up the zonking functions relating purely to types into
    GHC.Tc.Zonk.Type.

    This should allow us to introduce a slimmed-down zonking monad,
    which doesn't wrap the full TcM but a much smaller monad.
    This opens up the possibility of refactoring ErrCtxt to use this
    smaller zonking monad.

  - Refactor the remaining zonking functions to work over the monads
    ZonkTcM = ZonkT TcM and ZonkBndrTcM = ZonkBndrT TcM.

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -762,6 +762,8 @@ Library
         GHC.Tc.Utils.Unify
         GHC.Tc.Utils.Zonk
         GHC.Tc.Validity
+        GHC.Tc.Zonk.Monad
+        GHC.Tc.Zonk.Type
         GHC.ThToHs
         GHC.Types.Annotations
         GHC.Types.Avail
